[RED] Add test for async service filter subs box by status